--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "login",
   "version": "0.1.0",
+   "homepage": "https://nereidarondon.github.io/Login/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
